# mambo_robot

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  test.pcm  test_asr.py  test_local_api.py  test_local_asr.py  test_local_llm.py  test_tts_fixed_24k.py
docs/: 制作说明.md
esp32/: esp32_mambo.ino
eyes-ui/: index.html  package-lock.json  package.json
eyes-ui/src/: App.tsx  index.css
eyes-ui/src/components/: Eye.tsx
eyes-ui/src/lib/: emotions.ts
faces/: .gitkeep
models/: .gitkeep
src/: chat_typed.html  config.hpp  dashboard.html  dashboard_v2.html  dashboard_v3.html  dialog_system.hpp  main.cpp  test_vision_web.cpp  utils.hpp  vector_eyes.hpp  vision_engine.hpp  web_server.hpp
tools/: mic_echo_test.sh  mic_level.sh  serial_test.cpp
